# vk-selections

./: .gitignore  CMakeLists.txt  README  README.md
docs/: Presentation.ppt
docs/Dev_Notes/: API сообщений сообщества.md  Web библиотеки для C++.md  Запросы к API.md  План разработки.md  Поиск пользователей.md
docs/Dev_Notes/LongPoll/: LongPoll.md  Средства для работы с LongPoll.md
docs/Dev_Notes/Selection/: Selection.md  Создание выборок.md
docs/Dev_Notes/json/: Библиотека для работы с json в C++.md
docs/Dev_Notes/libcurl/: Подключение curl к CodeBlocks.md  Работа с curl.md
include/: selection_manager.h
include/fizvlad/: vk_chat.h  vk_longpoll.h  vk_utility.h
include/fizvlad/cpp-formula/: cpp-formula.h
include/fizvlad/vk_api/: vk_chat.h  vk_longpoll.h  vk_utility.h
include/fizvlad/vk_selection/: vk_selection.h
js/: execute_groupMembers.js  execute_groupMembers.js.txt  execute_unreadMessages.js  execute_unreadMessages.js.txt  execute_userSubscribers.js  execute_userSubscribers.js.txt  stringify.js
src/: main.cpp  selection_manager.cpp
src/fizvlad/: vk_chat.cpp  vk_longpoll.cpp  vk_utility.cpp
src/fizvlad/cpp-formula/: cpp-formula.cpp
src/fizvlad/vk_api/: vk_chat.cpp  vk_longpoll.cpp  vk_utility.cpp
src/fizvlad/vk_selection/: vk_selection.cpp
tests/test_chat/: main.cpp
tests/test_longpoll/: main.cpp
tests/test_selection/: main.cpp
tests/test_selection_operators/: main.cpp
tests/test_utility/: main.cpp
